# eventpinger

./: .gitignore  env.example  readme.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  eventbrite_categories.csv  eventbrite_top_only.csv  pyproject.toml
backend/app/: date_params.py  deps.py  main.py
backend/app/repositories/: events.py
backend/app/routers/: events.py
backend/app/schemas/: event.py
backend/data/: README.md  eventbrite_family_subcategories.csv
backend/scripts/: eventbrite_family_taxonomy.py  eventbrite_list_events.py
backend/tests/: test_events_router.py
docs/: DEVELOPMENT.md  FEATURES.md  SECURITY.md  additional_notes.md  additional_notes1.md  additional_notes2..md  business-idea-and-plan.md  business-idea.md  event-listing-ux.md  eventbrite_api.md  eventbrite_api_testing.md  eventbrite_family_subcategories.md  idea_enhaced.md  ideas_envent.md  india-market-landscape.md  mvp-feature-list.md  mvp_features.md  new_points1.md  team-idea-brief.md  tech-stack.md  testing-strategy.md  us-market-competitive-landscape.md  vs-eventbrite.md  vs-patch.md
frontend/: README.md  env  env.example  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/events/: page.tsx
frontend/components/: EventCard.test.tsx  EventCard.tsx  SiteHeader.tsx
frontend/lib/: api.test.ts  api.ts  browse-params.test.ts  browse-params.ts  events.test.ts  events.ts  featured-categories.ts  popular-destinations.ts  time-presets.test.ts  time-presets.ts
supabase/: README.md  config.toml  seed.sql
(+4 files in other folders)
